--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,7 +1,17 @@
 footer {
-    /* position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%; */
     text-align: center;
+}
+
+.text-ellipsis-3 {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.text-ellipsis-2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
